--- a/public/index.html
+++ b/public/index.html
@@ -3,7 +3,7 @@
 
 <head>
     <meta charset="utf-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no" />
+    <meta name="viewport" content="width=device-width, initial-scale=1, shrink-to-fit=no " user-scalable="no" />
     <meta name="description" content="" />
     <meta name="author" content="" />
     <title>Portafolio</title>
@@ -67,7 +67,7 @@
     <section class="page-section portfolio" id="portfolio">
         <div class="container">
             <!-- Portfolio Section Heading-->
-            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portfolio</h2>
+            <h2 class="page-section-heading text-center text-uppercase text-secondary mb-0">Portafolio</h2>
             <!-- Icon Divider-->
             <div class="divider-custom">
                 <div class="divider-custom-line"></div>
@@ -299,28 +299,31 @@
 
     </section>
     <!-- Footer-->
-    <footer class="footer px-4">
-        <div class="container-fluid d-flex flex-md-row justify-content-between align-items-md-center container-p-x py-3">
-            <a style="text-decoration: none;" target="_blank" href="./assets/CV DTM.pdf" target="_blank" class="footer-text fw-bolder">
-                <img src="assets/img/download.png" class="whow-820" width="32" height="32" alt="">
-                <span class="d-none-820">Descargar Currículum</span>
+    <footer class="footer px-4 py-0">
+        <div class="container-fluid d-flex flex-md-row justify-content-between align-items-md-center container-p-x py-2 ">
+            <a style="text-decoration: none;" target="_blank" href="./assets/CV DTM.pdf" target="_blank" class="footer-text fw-bolder" title="Descargar currículum">
+                <img src="assets/img/download.png" class=" " width="32" height="32" alt="">
+                <!-- <span class="d-none-820">Descargar Currículum</span> -->
             </a>
-            <a style="text-decoration: none;" href="mailto:babyyoda62406@gmail.com" class="footer-link me-4">
-                <img src="assets/img/gmail.png" class="whow-820" width="50" height="32" alt="">
-                <span class="d-none-820"> Enviar Correo</span>
-            </a>
-            <a style="text-decoration: none;"
-                href="https://wa.me/5358831892?text=Hola%2c+me+gustar%c3%ada+conocerte%2c+y+saber+en+detalle+como+tus+conocimientos+impulsar%c3%a1n+el+crecimiento+y+desarrollo+de+mi+negocio+o+empresa"
-                class="footer-link me-4">
-                <img src="assets/img/whats.png" class="whow-820" width="32" height="32" alt="">
-                <span class="d-none-820">Chatear por WhatsApp</span>
+            <div class="w-25 d-none-290">
 
+            </div>
+            <a style="text-decoration: none;" href="mailto:babyyoda62406@gmail.com" class="footer-link " title="Enviar correo">
+                <img src="assets/img/gmail.png" class=" " width="32" height="32" alt="">
+                <!-- <span class="d-none-820"> Enviar Correo</span> -->
             </a>
-            <a style="text-decoration: none;"
+            <a style="text-decoration: none;" title="Escribir al whatsapp whatsapp"
+                href="https://wa.me/5358831892?text=Hola%2c+me+gustar%c3%ada+conocerte%2c+y+saber+en+detalle+como+tus+conocimientos+impulsar%c3%a1n+el+crecimiento+y+desarrollo+de+mi+negocio+o+empresa"
+                class="footer-link ">
+                <img src="assets/img/whats.png" class="" width="32" height="32" alt="">
+                <!-- <span class="d-none-820">Chatear por WhatsApp</span> -->
+            </a>
+
+            <a style="text-decoration: none;" title="Donar"
                 href="https://link.trustwallet.com/send?coin=0&address=bc1qfkx4edlpq2s0athn0nw3g7a593sgrazv4fyr0y"
-                class="footer-link">
-                <img src="assets/img/donar.png" class="whow-820" width="32" height="32" alt="">
-                <span class="d-none-820">Dona aquí</span>
+                class="footer-link ">
+                <img src="assets/img/donar.png" class="" width="32" height="32" alt="">
+                <!-- <span class="d-none-820">Dona aquí</span> -->
             </a>
         </div>
     </footer>
