--- a/public/admin/admin.html
+++ b/public/admin/admin.html
@@ -95,23 +95,32 @@
 
 
 
-    <footer class="footer px-4" style="position: fixed; bottom: 0px; width: 100%;">
-        <div
-            class="container-fluid d-flex flex-md-row flex-column justify-content-between align-items-md-center gap-1 container-p-x py-3">
-            <div>
-                <a style="text-decoration: none;" href="#" target="_blank" class="footer-text fw-bolder">Descargar
-                    Currículum</a>
+    <footer class="footer px-4 py-0">
+        <div class="container-fluid d-flex flex-md-row justify-content-between align-items-md-center container-p-x py-2 ">
+            <a style="text-decoration: none;" target="_blank" href="./assets/CV DTM.pdf" target="_blank" class="footer-text fw-bolder" title="Descargar currículum">
+                <img src="../assets/img/download.png" class=" " width="32" height="32" alt="">
+                <!-- <span class="d-none-820">Descargar Currículum</span> -->
+            </a>
+            <div class="w-25 d-none-290">
+
             </div>
-            <div>
-                <a style="text-decoration: none;" href="mailto:babyyoda62406@gmail.com" class="footer-link me-4">Enviar
-                    Correo</a>
-                <a style="text-decoration: none;"
-                    href="https://wa.me/5358831892?text=Hola%2c+me+gustar%c3%ada+conocerte%2c+y+saber+en+detalle+como+tus+conocimientos+impulsar%c3%a1n+el+crecimiento+y+desarrollo+de+mi+negocio+o+empresa"
-                    class="footer-link me-4">Chatear por WhatsApp</a>
-                <a style="text-decoration: none;"
-                    href="https://link.trustwallet.com/send?coin=0&address=bc1qfkx4edlpq2s0athn0nw3g7a593sgrazv4fyr0y"
-                    class="footer-link">Dona aquí</a>
-            </div>
+            <a style="text-decoration: none;" href="mailto:babyyoda62406@gmail.com" class="footer-link " title="Enviar correo">
+                <img src="../assets/img/gmail.png" class=" " width="32" height="32" alt="">
+                <!-- <span class="d-none-820"> Enviar Correo</span> -->
+            </a>
+            <a style="text-decoration: none;" title="Escribir al whatsapp whatsapp"
+                href="https://wa.me/5358831892?text=Hola%2c+me+gustar%c3%ada+conocerte%2c+y+saber+en+detalle+como+tus+conocimientos+impulsar%c3%a1n+el+crecimiento+y+desarrollo+de+mi+negocio+o+empresa"
+                class="footer-link ">
+                <img src="../assets/img/whats.png" class="" width="32" height="32" alt="">
+                <!-- <span class="d-none-820">Chatear por WhatsApp</span> -->
+            </a>
+
+            <a style="text-decoration: none;" title="Donar"
+                href="https://link.trustwallet.com/send?coin=0&address=bc1qfkx4edlpq2s0athn0nw3g7a593sgrazv4fyr0y"
+                class="footer-link ">
+                <img src="../assets/img/donar.png" class="" width="32" height="32" alt="">
+                <!-- <span class="d-none-820">Dona aquí</span> -->
+            </a>
         </div>
     </footer>
     <!-- Portfolio Modals-->
