--- a/public/index.html
+++ b/public/index.html
@@ -301,7 +301,7 @@
     <!-- Footer-->
     <footer class="footer px-4 py-0">
         <div class="container-fluid d-flex flex-md-row justify-content-between align-items-md-center container-p-x py-2 ">
-            <a style="text-decoration: none;" target="_blank" href="./assets/CV DTM.pdf" target="_blank" class="footer-text fw-bolder" title="Descargar currículum">
+            <a style="text-decoration: none;" target="_blank" href="./assets/Deivis Torres.pdf" target="_blank" class="footer-text fw-bolder" title="Descargar currículum">
                 <img src="assets/img/download.png" class=" " width="32" height="32" alt="">
                 <!-- <span class="d-none-820">Descargar Currículum</span> -->
             </a>
